# MemoryManagementAnalysis

./: .gitignore  CMakeLists.txt  MemoryAllocationAnalysis.sln  README.md  Source.cpp
MemManagement/MemManagement.xcodeproj/: project.pbxproj
MemManagement/MemManagement.xcodeproj/project.xcworkspace/xcuserdata/vanessali.xcuserdatad/: UserInterfaceState.xcuserstate
MemManagement/MemManagement.xcodeproj/xcuserdata/vanessali.xcuserdatad/xcschemes/: xcschememanagement.plist
MemManagement/MemManagement/core/: main.cpp  memory_simulator.cpp  memory_simulator.hpp
MemManagement/MemManagement/simulator/: assembleDynamicFixed.cpp  assembleFixedEqual.cpp  assembleFixedEqual.hpp  assembleFixedUnequal.cpp  defragment.cpp  simulateDynamic.cpp  simulateFixed.cpp
MemManagement/MemManagement/structs/: partition.cpp  partition.hpp  process.hpp
MemoryManagementAnalysis.xcodeproj/: project.pbxproj
core/: ProcessList.txt  main.cpp  memory_simulator.cpp  memory_simulator.hpp
simulator/: assembleFixedUnequal.cpp  assembledDynamicFF.cpp  assembledFixedEqual.cpp  defragment.cpp  simulateDynamic.cpp  simulateFixed.cpp
structs/: partition.cpp  partition.hpp  process.hpp
